--- a/Wikipedia/Localizations/en.lproj/Localizable.strings
+++ b/Wikipedia/Localizations/en.lproj/Localizable.strings
@@ -588,6 +588,16 @@
 "icon-shortcut-random-title" = "Random article";
 "icon-shortcut-search-title" = "Search Wikipedia";
 "image-gallery-unknown-owner" = "Author unknown.";
+"image-rec-survey-instructions-1" = "Your answers improve future suggestions.";
+"image-rec-survey-instructions-2" = "Select one or more options";
+"image-rec-survey-option-1" = "Image is not relevant";
+"image-rec-survey-option-2" = "Not enough information to decide";
+"image-rec-survey-option-3" = "Image is offensive";
+"image-rec-survey-option-4" = "Image is low quality";
+"image-rec-survey-option-5" = "I don’t know this subject";
+"image-rec-survey-option-6" = "Other";
+"image-rec-survey-submit-button" = "Submit";
+"image-rec-survey-title" = "Reason";
 "image-rec-title" = "Add image";
 "image-rec-view-article" = "View article";
 "import-shared-reading-list-default-title" = "My Reading List";
