Update button title

--- a/Wikipedia/Localizations/en.lproj/Localizable.strings
+++ b/Wikipedia/Localizations/en.lproj/Localizable.strings
@@ -605,7 +605,7 @@
 "in-the-news-sub-title-from-language-wikipedia" = "From $1 Wikipedia";
 "in-the-news-sub-title-from-wikipedia" = "From Wikipedia";
 "in-the-news-title" = "In the news";
-"insert-action-title" = "Insert";
+"insert-action-title" = "Next";
 "insert-link-title" = "Insert link";
 "insert-media-alternative-text-description" = "Text description for readers who cannot see the image";
 "insert-media-alternative-text-placeholder" = "Describe this image";
