add logic to show introduction paragraph is presented differently in the editing view

--- a/Wikipedia/Localizations/en.lproj/Localizable.strings
+++ b/Wikipedia/Localizations/en.lproj/Localizable.strings
@@ -168,6 +168,8 @@
 "description-edit-length-warning" = "$1 / $2";
 "description-edit-license" = "By changing the article description, I agree to the $1 and to irrevocably release my contributions under the $2 license.";
 "description-edit-pencil-introduction" = "Edit introduction";
+"description-edit-pencil-introduction-confirmation-message" = "The ordering of elements will be different in the editing view than article view. Would you like to proceed?";
+"description-edit-pencil-proceed-button-title" = "Yes, Proceed";
 "description-edit-pencil-title" = "Edit article description";
 "description-edit-placeholder-title" = "Short descriptions are best";
 "description-edit-publish" = "Publish description";
