--- a/Wikipedia/Localizations/qqq.lproj/Localizable.strings
+++ b/Wikipedia/Localizations/qqq.lproj/Localizable.strings
@@ -168,6 +168,8 @@
 "description-edit-length-warning" = "Displayed to indicate how many description characters were entered. Separator can be customized depending on the language. $1 is replaced with the number of characters entered, $2 is replaced with the recommended maximum number of characters.";
 "description-edit-license" = "Button text for information about the Terms of Use and edit licenses. Parameters:\n* $1 - 'Terms of Use' link, $2 - license name link";
 "description-edit-pencil-introduction" = "Title for button used to show article lead section editor";
+"description-edit-pencil-introduction-confirmation-message" = "Description of alert dialouge to show ordering is different";
+"description-edit-pencil-proceed-button-title" = "Title for button to proceed to edit introduction screen. The question being asked is: The ordering of elements will be different in the editing view than article view";
 "description-edit-pencil-title" = "Title for button used to show article description editor";
 "description-edit-placeholder-title" = "Placeholder text shown inside description field until user taps on it";
 "description-edit-publish" = "Title for publish description button";
