Copy tweaks, fine print font size

--- a/Wikipedia/Localizations/en.lproj/Localizable.strings
+++ b/Wikipedia/Localizations/en.lproj/Localizable.strings
@@ -339,7 +339,7 @@
 "edit-underline-remove-accessibility-label" = "Remove underline";
 "edit-unordered-list-accessibility-label" = "Make current line unordered list";
 "edit-unordered-list-remove-accessibility-label" = "Remove unordered list from current line";
-"edit-watch-list-learn-more-text" = "Learn more about watch lists";
+"edit-watch-list-learn-more-text" = "Learn more about your Watchlist";
 "edit-watch-this-page-text" = "Watch this page";
 "editing-welcome-be-bold-subtitle" = "Be bold but not reckless in updating articles. Do not agonize over making mistakes: every past version of a page is saved, so mistakes can be easily corrected by our community.";
 "editing-welcome-be-bold-title" = "Your voice is important";
