Add missing localized strings

--- a/Wikipedia/Localizations/pt.lproj/Localizable.strings
+++ b/Wikipedia/Localizations/pt.lproj/Localizable.strings
@@ -553,7 +553,8 @@
 "image-rec-tooltip-3-title" = "Decidir";
 "image-rec-view-article" = "Ver artigo";
 "image-recommendations-email-first-line" = "Encontrei um problema com o recurso Adicionar uma Imagem com Edições Sugeridas:";
-"image-recommendations-email-fourth-line" = "[Descreva a solução proposta]";
+"image-recommendations-email-fifth-line" =  "- [[Capturas de tela ou links]]";
+"image-recommendations-email-fourth-line" = "- [Descreva a solução proposta]";
 "image-recommendations-email-second-line" = "- [Descreva o problema específico]";
 "image-recommendations-email-third-line" = "O comportamento que eu gostaria de ver é:";
 "image-recommendations-email-title" = "Relatório de Problemas - Recurso Adicionar uma Imagem";
