--- a/Wikipedia/Localizations/fr.lproj/Localizable.strings
+++ b/Wikipedia/Localizations/fr.lproj/Localizable.strings
@@ -610,6 +610,7 @@
 "image-rec-tooltip-3-title" = "Décider";
 "image-rec-view-article" = "Afficher l’article";
 "image-recommendations-email-first-line" = "J'ai rencontré un problème avec les modifications suggérées par la fonctionnalité « Ajouter une image » :";
+"image-recommendations-email-fifth-line" = "- [Captures d'écran ou liens]";
 "image-recommendations-email-fourth-line" = "- [Décrire la solution proposée]";
 "image-recommendations-email-second-line" = "- [Décrire le problème spécifique]";
 "image-recommendations-email-third-line" = "Le comportement que je souhaiterais voir :";
